fix: fixed GET method