@@ -5,10 +5,9 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.math.BigDecimal;
 import java.sql.*;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.sql.Date;
+import java.time.LocalDate;
+import java.util.*;
 import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.dompet.utils.annotations.Column;
@@ -116,43 +115,30 @@ public abstract class CRUDOperationImpl<T> {
     return null;
   }
 
-  public final Optional<T> getById(String idColumn, Integer id) {
-    try {
-      ResultSet resultSet =
-              getConnection()
-                      .createStatement()
-                      .executeQuery(
-                              "SELECT * FROM " + getActualClassName() + " WHERE " + idColumn + " = " + id);
-
-      while (resultSet.next()) {
-        return Optional.ofNullable(createT(resultSet));
-      }
-    } catch (SQLException e) {
-      throw new RuntimeException(e);
-    }
-    return null;
+  public final Optional<T> getById(Object id) {
+    String idColumnName = getIdColumnName(getActualClass());
+    return getById(idColumnName, id.toString());
   }
 
-  public final Optional<T> getById(Object id) {
-    return getById("id", id.toString());
+  private String getIdColumnName(Class<?> modelClass) {
+    for (Field field : modelClass.getDeclaredFields()) {
+      if (field.isAnnotationPresent(Id.class)) {
+        Column columnAnnotation = field.getAnnotation(Column.class);
+        return columnAnnotation.name();
+      }
+    }
+    throw new IllegalArgumentException("No field annotated with @Id found in the class.");
   }
 
   private String createSQLInsertQuery(boolean useId) {
     StringBuilder sql = new StringBuilder("INSERT INTO %s(".formatted(getActualClassName()));
-    List<String> columns =
-        Arrays.stream(getActualClass().getDeclaredFields())
-            .filter(champ -> !(!useId && champ.isAnnotationPresent(Id.class)))
+    List<String> columns = Arrays.stream(getActualClass().getDeclaredFields())
+            .filter(field -> field.isAnnotationPresent(Column.class) && (useId || !field.isAnnotationPresent(Id.class)))
             .map(this::getColumnName)
-            .toList();
-    for (String column : columns) {
-      sql.append("%s,".formatted(column));
-    }
-    sql.deleteCharAt(sql.length() - 1);
+            .collect(Collectors.toList());
+    sql.append(String.join(",", columns));
     sql.append(") VALUES (");
-    for (String column : columns) {
-      sql.append("?,");
-    }
-    sql.deleteCharAt(sql.length() - 1);
+    sql.append(String.join(",", Collections.nCopies(columns.size(), "?")));
     sql.append(")");
     return sql.toString();
   }
@@ -162,41 +148,36 @@ public abstract class CRUDOperationImpl<T> {
       String sql = createSQLInsertQuery(useId);
       PreparedStatement pr = getConnection().prepareStatement(sql);
       int index = 1;
-      for (Field champ : getActualClass().getDeclaredFields()) {
-        if (!(!useId && champ.isAnnotationPresent(Id.class))) {
-          Method getter =
-              getActualClass()
-                  .getDeclaredMethod(
-                      "get%s%s"
-                          .formatted(
-                              Character.toUpperCase(champ.getName().charAt(0)),
-                              champ.getName().substring(1)));
-          switch (champ.getType().getName()) {
-            case "java.lang.String" -> pr.setString(index, getter.invoke(newT).toString());
-            case "java.lang.Integer" -> pr.setInt(index, (Integer) getter.invoke(newT));
-            case "java.time.LocalDate" -> pr.setDate(
-                index, Date.valueOf(getter.invoke(newT).toString()));
-            case "java.time.Instant" -> pr.setTimestamp(
-                index, Timestamp.valueOf(getter.invoke(newT).toString()));
-            case "java.lang.Boolean" -> pr.setBoolean(
-                index, Boolean.parseBoolean(getter.invoke(newT).toString()));
-            case "java.math.BigDecimal" -> pr.setBigDecimal(
-                index, BigDecimal.valueOf(Long.parseLong(getter.invoke(newT).toString())));
-            case "java.lang.Double" -> pr.setFloat(index, (Integer) getter.invoke(newT));
-            default -> throw new Error(
-                String.format(
-                    "The Type with id %s in the result set is not implemented", champ.getType()));
-          }
-          index++;
+      for (Field field : getActualClass().getDeclaredFields()) {
+        if (field.isAnnotationPresent(Column.class) && (useId || !field.isAnnotationPresent(Id.class))) {
+          Method getter = getActualClass().getDeclaredMethod("get" + Character.toUpperCase(field.getName().charAt(0)) + field.getName().substring(1));
+          Object value = getter.invoke(newT);
+          setPreparedStatementValue(pr, index++, value, field.getType());
         }
       }
-    } catch (SQLException
-        | NoSuchMethodException
-        | InvocationTargetException
-        | IllegalAccessException e) {
+      pr.executeUpdate();
+    } catch (SQLException | NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
       throw new RuntimeException(e);
     }
     return newT;
+  }
+
+  private void setPreparedStatementValue(PreparedStatement pr, int index, Object value, Class<?> type) throws SQLException {
+    if (type == String.class) {
+      pr.setString(index, (String) value);
+    } else if (type == Integer.class) {
+      pr.setInt(index, (Integer) value);
+    } else if (type == LocalDate.class) {
+      pr.setDate(index, Date.valueOf((LocalDate) value));
+    } else if (type == BigDecimal.class) {
+      pr.setBigDecimal(index, (BigDecimal) value);
+    } else if (type == Boolean.class) {
+      pr.setBoolean(index, (Boolean) value);
+    } else if (type == Double.class) {
+      pr.setDouble(index, (Double) value);
+    } else {
+      throw new IllegalArgumentException("Unsupported type: " + type.getName());
+    }
   }
 
   public T save(T entity) {
